# prosperous-universe

./: .gitignore  TODO  analyze.py  api-documentation.json  buildings.json  bulk-craft-calculator.py  burn.py  calc.py  cogc-finder.py  fetch-prices.py  fio_api.py  fio_utils.py  flight-calculation-dump.txt  generate-daily-sell-rates-csv-all.py  generate-daily-sell-rates-csv.py  generate-xit-action.py  jump-data.csv  liquid_finder.py  manufacture-ranker-global.py  manufacture-ranker.py  manufacture_ranker.py  materials.csv  materials.json  montem.py  notify.py  parse-flight-calculations.py  pathfinding.py  planet-finder.py  planet-ranker.py  planet-resources.json  planet-search.py  planet_ranker.py  planet_ranker_prunpy.py  planetresources.csv  prun.py  recipevis.py  route.py  setup.py  systemlinks.csv  test.py  (+4 more)
prunpy/: README.md  __init__.py  api.py  constants.py  data_loader.py  pyproject.toml  setup.py
prunpy/models/: base.py  building.py  company.py  exchange.py  material.py  pathfinding.py  planet.py  population.py  price_history.py  recipe.py  recipe_queue.py  recipe_tree.py  system.py
prunpy/prunpy/: .data_loader.py.kate-swp  __init__.py  api.py  constants.py  data_loader.py  game_importer.py
prunpy/prunpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
prunpy/prunpy/models/: base.py  building.py  exchange.py  logistics.py  material.py  pathfinding.py  planet.py  population.py  recipe.py  recipe_tree.py
prunpy/prunpy/utils/: .color.py.kate-swp  pathfinding_legacy.py  resource_list.py  terminal_color_scale.py
prunpy/utils/: building_list.py  resource_list.py  shift_price.py  terminal_color_scale.py  terminal_formatting.py  xit_action.py
