[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prunpy"
version = "0.2.0"
description = "A package for modeling systems within the game Prosperous Universe, and providing an interface for the FIO API."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "fishmodem", email = "fishmodem@proton.me" }
]
license = { text = "GPLv3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests",
    "pandas"
]

[tool.setuptools]
packages = { find = {} }

[project.urls]
#"Homepage" = "https://github.com/fishmodem/prunpy"

[project.scripts]
# This is where your command-line scripts go
# 'command_name' = 'module:function_name',
